--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -32,3 +32,23 @@ jobs:
         TEST_RESULTS: "${{steps.test.outputs.result}}"
       with:
         runners: test
+steps:
+- name: Set up Python
+  uses: actions/setup-python@v4
+  with:
+    python-version: '3.8'  # 원하는 Python 버전
+- name: Checkout code
+  uses: actions/checkout@v4
+- name: test
+  id: test
+  uses: classroom-resources/autograding-io-grader@v1
+  with:
+    test-name: test
+    setup-command: ''
+    command: python tester.py
+    input: ''
+    expected-output: |-
+      c = 5.0
+      area = 314.1592653589793
+    comparison-method: contains
+    timeout: 10
